# mainframe-rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  good_ideas.txt
.sqlx/: query-0433b27d1e6e516c3af1371e4aa55d886bd619c8172a255bf19272efb5d6f94c.json  query-050ff0c4b9cefb27fd2b6ef622d629c36e6736a573a403297aecfdbc13c87c58.json  query-0cae85b6f2caaeaf7f6f543f48f399262d5292c172c369a75b64c06b7fdbdac9.json  query-0da5d879adc0a7e0852baef14c9af9fcf020854e3550bb6a3bb596a190a2a6d7.json  query-1290dc0d93915f8d757a1575216f0dfda12f7003e6a42418b14ed6007efea7e7.json  query-134ff32344882b5818b997891a7ca8817c5c4282796abc805d2339fa8f82b106.json  query-14ae884f4d3a6ee4521be8c51966cf9556a7998598e5c998a387c0318804c3f3.json  query-1c089d37a45b18214ae9e212edc0534b2fd29beb3615928c31e80063708c6c07.json  query-1d4550d68cddd9854688a984bdf6908ddcd5cbbb1f9a6efb98aee13df497ea95.json  query-35d2cea5e1e688ec94b8d5f9b3ca2e52b32367219483a048c5e083413ae4764b.json  query-3bd40adf0cb2eafc1c1a12e48239545d288164f5fcdeedb8615b42a4555d345d.json  query-5cb07f5c2f249e3b8204a9f2e45d9fe1627766bacc9497ecf058ee055463d30e.json  query-700954cac6a510f7c2ec3ef6e79bc70b70ebe0d95496cda570d9a8d4ad12f9b7.json  query-77693769a62329e2ac21d8fced088ecf2c0acf2b1a7d13c4069b6702f5d03f8a.json  query-7f3f299ae43e8ee9d6f338add4f2e2ace74b59b5232b6ff67a00424fa3a27377.json  query-86a16349b466e4507d762e3c0d0fd8390105889c4834c5d1657ed134349f6fd1.json  query-8741584d61c412f68212ad5c5a0d8a5d262628c4c4ef0845712cec30dc517ea6.json  query-87dc2727739565afad40dec8bf1abb7d211751114dca1e73e692d1475029af9d.json  query-8b489f97180924bb49bd9beda87181c5080b84334df651a826be3f51ef6d567c.json  query-8fffe44a91dcbb35e49987c9ffe5f5607d5b0a6d13831ac747c774a49f3fd0d7.json  query-90b6a7be3da6d64f52f1270a908e72fb0e461de567090f407f939ac110383b1d.json  query-93923eec134935b37af558a1439c2a139ea918f0c2429f38a8dfaf1d2f722981.json  query-990c93c12cf91f0bba25ac0efee97dc66bac31d9f152d6caecf5364c72c2481e.json  query-9cf038de72d4702fcaf7d8ed0c6724ea8804ebc55438f80328c458db92a42ee8.json  query-adee56a385e1eefdcf6c126feb4c5e3cd4f90a52b4b0cb63c816595e9ed51da3.json  query-b7e4a197103d662080cdd81346a408398f6de60ce1e9280f1a62a806096a7bdc.json  query-b825ec36a0957b0f8d7eebaee7b6ced842e3d30d184b5f1fddd8adf8d2268ee5.json  query-bb73ef2440d0ef8b76c477479e4b5af706c69aed61231bf9b1f55708c35e1554.json  query-c491828a2f1c5d0490982224876b22a02f7c355d5f86b3bf439035f2e80ce6ff.json  query-c754db45f1c34a2016e096f37f896a79e839725f213829aea1b26f1a7f12c7c1.json  query-c7c8dcea0b0234b3199ba00988967a8f4f1daf6bd086fafc7c799787a382f849.json  query-c86df12757b6c1584e445fcc8bd8d1474241b5d1a17835c4a0412ef0aa55d07c.json  query-d0ec06dba9a7b1a36c3cf7beae710f208274e6bde7dcbb29bf7505fa911d2248.json  query-d4a66aa694b78bc8278d1357d2f307f34c74336b795700044c473aa81c6a751d.json  query-d6168018a92e6575fddeac7a3db4c7ca974059652cb2be381f5968cdc058eb1b.json  query-dae8e4802ccba4c5f1a786ce911dd69335d1a2afe0a5a0bbd7dce88e76d7015a.json  query-e4fb7b75991a1ec3d05139c419ede5c762298e5688a2e5b40482629b23e4aa97.json  query-ed76e74a2a6c287ad0967004e5daccc8752c74ede3e8f9378c07a9e80e816384.json  query-f25816d793d54d32adbbc869ad977dbd681465c1dbc0c1a881157a010d90063d.json  query-fa4afd65ca6fcb403105ef0a5dce87d164af32829922591b28f6893020b7c3ae.json  (+2 more)
app_central_api/: bruno.json
frontend/: .env  README.md  components.d.ts  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.mts  vite.config.ts
migrations/: 20251123062530_add_recipe_model.down.sql  20251123062530_add_recipe_model.up.sql  20251123062615_add_user_model.down.sql  20251123062615_add_user_model.up.sql  20251123173720_add_session_table.up.sql  20251123235818_update_recipe_model.up.sql  20251216213253_add_user_model.up.sql  20251217151152_add_session_model.down.sql  20251217151152_add_session_model.up.sql  20251217152917_add_recipe_model.down.sql  20251217152917_add_recipe_model.up.sql  20251217153311_add_recipe_ingredients_model.down.sql  20251217153311_add_recipe_ingredients_model.up.sql  20251217153322_add_recipe_instructions_model.down.sql  20251217153322_add_recipe_instructions_model.up.sql  20251217160726_add_roles_model.up.sql  20251217160828_add_user_roles_model.down.sql  20251217160828_add_user_roles_model.up.sql  20251218214853_seed_roles.down.sql  20251218214853_seed_roles.up.sql
old_migrations/: 20251123062615_add_user_model.up.sql  20251123232624_seed_admin_user.down.sql  20251123232624_seed_admin_user.up.sql  20251123235818_update_recipe_model.down.sql
scripts/: seed_admin_user.sql  (+1 more)
src/: auth.rs  (+8 more)
(+186 files in other folders)
