[package]
name = "mainframe"
version = "0.1.0"
edition = "2024"
default-run = "mainframe"


[[bin]]
name = "mainframe"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "1.8.1"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.43"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "time",
    "uuid",
    "derive",
] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "chrono",
    "debug",
    "time",
    "uuid",
] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }


[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"


[lints.clippy.nursery]
level = "deny"
priority = -1


[lints.clippy.pedantic]
level = "deny"
priority = -1


[patch.crates-io.utoipa]
# https://github.com/juhaku/utoipa/pull/1423
git = "https://github.com/raimannma/utoipa.git"
rev = "47aa9ff215db156b6cfe687cab858360c6fe4275"
